--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@hanseo0507/react-toast": "^1.0.1",
     "@headlessui/react": "^1.7.17",
+    "@napi-rs/canvas": "^0.1.44",
+    "express-rate-limit": "^7.1.1",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
     "npm": "^10.0.0",
     "path": "^0.12.7",
+    "pivas": "^0.0.2-betafix",
     "postcss": "8.4.29",
     "prop-types": "^15.8.1",
+    "proxy-addr": "^2.0.7",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
