--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
-    "npm": "^10.0.0",
     "path": "^0.12.7",
     "pivas": "^0.0.2-betafix",
-    "postcss": "8.4.29",
     "prop-types": "^15.8.1",
     "proxy-addr": "^2.0.7",
     "react": "^18.2.0",
@@ -32,6 +30,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
